[gd_scene load_steps=3 format=2]

[ext_resource path="res://cutscenes/CutsceneCamera.gd" type="Script" id=1]
[ext_resource path="res://core/ScreenShake.tscn" type="PackedScene" id=2]

[node name="CutsceneCamera" type="Camera2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="DisableTween" type="Tween" parent="."]

[node name="ScreenShake" parent="." instance=ExtResource( 2 )]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
